fixing collapsed buttons

--- a/style/styles.css
+++ b/style/styles.css
@@ -20,6 +20,13 @@ h1 {
     margin-top: 20px;
 }
 
+h3 {
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Courier New', monospace;
+    color: black
+}
+
 .accordion-body {
     font-size: 15px;
     font-family: 'Courier New', monospace;
@@ -27,7 +34,7 @@ h1 {
 }
 
 .accordion-button {
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'Courier New', monospace;
     background-color: rgb(25, 26, 26);
     color: antiquewhite;
